less/global.less
/* ... */
// apparently these need to be repeated to work
//  -- see http://www.sitepoint.com/html5-full-screen-api/#fbid=LmAi3nyqiZr
body:full-screen            .fullscreen { .tb-fullscreen(); }
body:-webkit-full-screen    .fullscreen { .tb-fullscreen(); }
body:-moz-full-screen       .fullscreen { .tb-fullscreen(); }
body:-o-full-screen         .fullscreen { .tb-fullscreen(); }
body:-ms-full-screen        .fullscreen { .tb-fullscreen(); }


#lessonpanel {
    position: absolute;
    top: 45px; left: 0; right: 0;
	height: 16px;
    background: rgba(0, 0, 0, 0.5);
    padding: @ui-spc;
	z-index: 1;

	.tutorial-description {
		float: left;
		p { margin: 0; }
	}

    .close-button {
        display: inline;
        float: right;
        content:url('../img/icons/icon-close-white-circle.png');
        padding-right: 0;
        padding-top: 0;
        padding-left: 0;
    }
}

#debugpanel {
    background: rgba(0, 0, 0, 0.25);

    #debuglabel {

    }
    #btn-dbgcontinue {

    }
}

//generic object highlight glowing pulse
.highlight {
    .border-pulse() {
        from {
            box-shadow: inset 0 0 10px 4px lighten(@col-ui-blue, 10%),
                        0px 0px 10px 4px lighten(@col-ui-blue, 10%);
        }
        to {
            box-shadow: inset 0 0 10px 4px fade(darken(@col-ui-blue, 10%), 80%),
                        0px 0px 10px 4px fade(darken(@col-ui-blue, 10%), 80%);
        }
    }

    /*z-index: 2000;*/
    @keyframes border-pulse { .border-pulse; }
    @-webkit-keyframes border-pulse { .border-pulse; }
    animation: border-pulse 1s;
    -webkit-animation: border-pulse 1s;
    -moz-animation: border-pulse 1s;
    animation-iteration-count: infinite;
    -webkit-animation-iteration-count: infinite;
    -moz-animation-iteration-count: infinite;
    animation-direction: alternate;
    -webkit-animation-direction: alternate;
    -moz-animation-direction: alternate;
}

//for fading out objects during the tutorial
.fade {
	-webkit-filter: grayscale(100%) brightness(-0.15) contrast(50%);
//    -moz-filter: grayscale(100%); // brightness(-0.15) contrast(50%);
//    filter: grayscale(1);// brightness(-0.15) contrast(50%);

}


//=================================================================================================
//
// publish panels
//

#publish-placeholder {
    position: absolute;
    right: 66px;
    top: 64px;

    #publish-inprogress {
        img {
            position: relative;
            top: 10px;
            left: 140px;
        }
    }
    #publish-share {
        #publish-email    { .ui-button-icon(left, '../img/icons/icon-share-email.png', -3px); }
        #publish-facebook { .ui-button-icon(left, '../img/icons/icon-share-facebook.png', -3px); }
        #publish-twitter  { .ui-button-icon(left, '../img/icons/icon-share-twitter.png', -3px); }
    }
}


//=================================================================================================
//
// help panels
//

.help-panel {
    position: absolute;
    left: 0; right: 0; top: 0; bottom: 0;
    background: rgba(0, 0, 0, 0.5);
    z-index: 20000;
}

.help-frame {
    position: absolute;
    left: 10%; right: 10%;
    top: 10%; bottom: 10%;
    margin: 0;
    padding: 0;
    border: 6px solid @col-ui-dkgrey;
    box-shadow: 3px 3px 10px 4px rgba(0, 0, 0, 0.25);
    border-radius: @ui-bradius;
    background: white;

    > h1 {
        background: @col-ui-grey;
        color: white;
        margin: 0;
        padding: @ui-spc/2 @ui-spc;
        border-top-left-radius: 6px;
        border-top-right-radius: 6px;
        font-size: 2em;
    }
    .help-close {
        content:url('../img/icons/icon-close-white-circle.png');
        float: right;
        padding-right: 5px;
        padding-top: 10px;
        opacity: 0.5;
        &:hover {
            opacity: 1.0;
        }
    }
    > div {
        position: absolute;
        left: 0; right: 0; top: 43px; bottom: 0;
        margin: 5px;
        overflow: scroll;
        color: #222;
        padding: @ui-spc;

        p {
            padding-left: @ui-spc;
            margin-top: @ui-spc/2;
        }
        a {
            color: darken(@col-ui-blue, 30%);
            font-weight: bold;
            &:hover {
                color: @col-ui-blue;
            }
        }
        h1 {
            font-size: 1.5em;
            color: @col-ui-green;
        }
        h3 {
            padding-left: @ui-spc;
            font-size: 1.2em;
        }
        term {
            font-weight: bold;
        }
        // 2nd div onwards...
        > div:nth-child(n+2) {
          margin-top: 3em;
        }
    }
}


//=================================================================================================
//
// Global mixins
//

.rotate(@angle) {
    transform:rotate(@angle);
    -ms-transform:rotate(@angle); /* IE 9 */
    -moz-transform:rotate(@angle); /* Firefox */
    -webkit-transform:rotate(@angle); /* Safari and Chrome */
    -o-transform:rotate(@angle); /* Opera */
}
.transform(@trans) {
    transform:@trans;
    -ms-transform:@trans; /* IE 9 */
    -moz-transform:@trans; /* Firefox */
    -webkit-transform:@trans; /* Safari and Chrome */
    -o-transform:@trans; /* Opera */
}


/* Import other (specific) stylesheets */

@import "cssarrow.less";
@import "editpanel.less";
@import "stage.less";
@import "tutorial.less";
@import "home.less";

